--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 project3/__pycache__/csp.cpython-37.pyc
 project3/__pycache__/utils.cpython-37.pyc
 project3/__pycache__/search.cpython-37.pyc
+.vscode/settings.json
